<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".InitializeApp">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/initialization_title"
        android:textSize="26dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/employName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/create_acc_name"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/employAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/create_acc_age"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/employAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/create_acc_address"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/employPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/create_acc_password"
        android:textSize="15dp" />

    <Button
        android:id="@+id/first_employee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="20dp"
        android:text="@string/first_employ"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/adminName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/create_acc_name"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/adminAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/create_acc_age"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/adminAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/create_acc_address"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/adminPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:hint="@string/create_acc_password"
        android:textSize="15dp" />

    <Button
        android:id="@+id/first_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="20dp"
        android:text="@string/first_admin"
        android:textSize="15dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/go_to_login"
        android:textSize="15dp" />

</LinearLayout>