<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".CheckOut">


    <TextView
        android:id="@+id/ViewText19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/customer_checkout"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:text="@string/customer_checkout_your_cart" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="315dp"
        android:layout_height="400dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayCart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="TextView"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonCheckout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/customer_main_checkout_btn" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/back" />

</LinearLayout>